Corrected the index on the copy file button script

--- a/templates/forwards.html
+++ b/templates/forwards.html
@@ -2,7 +2,6 @@
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>web_name</th>
       <th>team</th>
       <th>position</th>
       <th>value</th>
@@ -10,249 +9,218 @@
       <th>now_cost</th>
       <th>total_rank</th>
       <th>form</th>
-      <th>last_week_rank</th>
+    </tr>
+    <tr>
+      <th>web_name</th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th>548</th>
-      <td>Kane</td>
+      <th>Kane</th>
       <td>Spurs</td>
       <td>Forward</td>
-      <td>14.553571</td>
-      <td>182.491767</td>
-      <td>11.2</td>
+      <td>16.106195</td>
+      <td>194.699295</td>
+      <td>11.3</td>
       <td>1.0</td>
-      <td>3.3</td>
-      <td>2.0</td>
+      <td>6.2</td>
     </tr>
     <tr>
-      <th>312</th>
-      <td>Bamford</td>
+      <th>Bamford</th>
       <td>Leeds</td>
       <td>Forward</td>
-      <td>20.882353</td>
-      <td>133.514575</td>
+      <td>21.176471</td>
+      <td>136.997887</td>
       <td>6.8</td>
       <td>2.0</td>
-      <td>3.0</td>
-      <td>1.0</td>
+      <td>2.8</td>
     </tr>
     <tr>
-      <th>278</th>
-      <td>Vardy</td>
+      <th>Vardy</th>
       <td>Leicester</td>
       <td>Forward</td>
       <td>13.137255</td>
-      <td>164.703766</td>
+      <td>180.287763</td>
       <td>10.2</td>
       <td>3.0</td>
-      <td>3.0</td>
-      <td>4.0</td>
+      <td>3.4</td>
     </tr>
     <tr>
-      <th>61</th>
-      <td>Watkins</td>
+      <th>Calvert-Lewin</th>
+      <td>Everton</td>
+      <td>Forward</td>
+      <td>16.883117</td>
+      <td>134.155875</td>
+      <td>7.7</td>
+      <td>4.0</td>
+      <td>1.7</td>
+    </tr>
+    <tr>
+      <th>Watkins</th>
       <td>Aston Villa</td>
       <td>Forward</td>
       <td>17.121212</td>
-      <td>113.677852</td>
+      <td>116.282661</td>
       <td>6.6</td>
-      <td>4.0</td>
-      <td>3.7</td>
+      <td>5.0</td>
+      <td>2.6</td>
+    </tr>
+    <tr>
+      <th>Richarlison</th>
+      <td>Everton</td>
+      <td>Forward</td>
+      <td>11.500000</td>
+      <td>95.967345</td>
+      <td>8.0</td>
+      <td>6.0</td>
+      <td>5.7</td>
+    </tr>
+    <tr>
+      <th>Adams</th>
+      <td>Southampton</td>
+      <td>Forward</td>
+      <td>17.241379</td>
+      <td>76.595123</td>
+      <td>5.8</td>
+      <td>7.0</td>
       <td>3.0</td>
     </tr>
     <tr>
-      <th>215</th>
-      <td>Calvert-Lewin</td>
-      <td>Everton</td>
-      <td>Forward</td>
-      <td>16.410256</td>
-      <td>129.019837</td>
-      <td>7.8</td>
-      <td>5.0</td>
-      <td>2.9</td>
-      <td>5.0</td>
-    </tr>
-    <tr>
-      <th>217</th>
-      <td>Richarlison</td>
-      <td>Everton</td>
-      <td>Forward</td>
-      <td>11.392405</td>
-      <td>93.262327</td>
-      <td>7.9</td>
-      <td>6.0</td>
-      <td>4.9</td>
-      <td>6.0</td>
-    </tr>
-    <tr>
-      <th>524</th>
-      <td>Adams</td>
-      <td>Southampton</td>
-      <td>Forward</td>
-      <td>16.206897</td>
-      <td>88.856672</td>
-      <td>5.8</td>
-      <td>7.0</td>
-      <td>2.4</td>
-      <td>9.0</td>
-    </tr>
-    <tr>
-      <th>344</th>
-      <td>Firmino</td>
+      <th>Firmino</th>
       <td>Liverpool</td>
       <td>Forward</td>
       <td>11.086957</td>
-      <td>123.201383</td>
+      <td>124.997876</td>
       <td>9.2</td>
       <td>8.0</td>
-      <td>2.7</td>
-      <td>7.0</td>
+      <td>2.8</td>
     </tr>
     <tr>
-      <th>153</th>
-      <td>Werner</td>
-      <td>Chelsea</td>
-      <td>Forward</td>
-      <td>10.652174</td>
-      <td>108.502839</td>
-      <td>9.2</td>
-      <td>9.0</td>
-      <td>3.5</td>
-      <td>8.0</td>
-    </tr>
-    <tr>
-      <th>470</th>
-      <td>Wilson</td>
+      <th>Wilson</th>
       <td>Newcastle</td>
       <td>Forward</td>
       <td>17.846154</td>
-      <td>107.110915</td>
+      <td>111.520001</td>
       <td>6.5</td>
-      <td>10.0</td>
-      <td>0.2</td>
-      <td>10.0</td>
+      <td>9.0</td>
+      <td>0.0</td>
     </tr>
     <tr>
-      <th>514</th>
-      <td>Ings</td>
+      <th>Ings</th>
       <td>Southampton</td>
       <td>Forward</td>
       <td>11.309524</td>
-      <td>110.572382</td>
+      <td>118.279133</td>
       <td>8.4</td>
-      <td>11.0</td>
+      <td>10.0</td>
       <td>2.3</td>
-      <td>12.0</td>
     </tr>
     <tr>
-      <th>81</th>
-      <td>Maupay</td>
+      <th>Maupay</th>
       <td>Brighton</td>
       <td>Forward</td>
       <td>14.262295</td>
-      <td>79.750350</td>
+      <td>81.848050</td>
       <td>6.1</td>
+      <td>11.0</td>
+      <td>2.8</td>
+    </tr>
+    <tr>
+      <th>Werner</th>
+      <td>Chelsea</td>
+      <td>Forward</td>
+      <td>10.869565</td>
+      <td>104.701917</td>
+      <td>9.2</td>
       <td>12.0</td>
       <td>2.6</td>
-      <td>11.0</td>
     </tr>
     <tr>
-      <th>621</th>
-      <td>Antonio</td>
+      <th>Antonio</th>
       <td>West Ham</td>
       <td>Forward</td>
-      <td>11.818182</td>
-      <td>75.839380</td>
+      <td>12.121212</td>
+      <td>70.190451</td>
       <td>6.6</td>
       <td>13.0</td>
-      <td>3.0</td>
-      <td>14.0</td>
+      <td>3.8</td>
     </tr>
     <tr>
-      <th>5</th>
-      <td>Lacazette</td>
+      <th>Lacazette</th>
       <td>Arsenal</td>
       <td>Forward</td>
       <td>11.111111</td>
-      <td>94.353666</td>
+      <td>91.823818</td>
       <td>8.1</td>
       <td>14.0</td>
-      <td>2.2</td>
-      <td>13.0</td>
+      <td>2.5</td>
     </tr>
     <tr>
-      <th>386</th>
-      <td>Jesus</td>
+      <th>Jesus</th>
       <td>Man City</td>
       <td>Forward</td>
-      <td>8.804348</td>
-      <td>91.326068</td>
+      <td>8.913043</td>
+      <td>93.890200</td>
       <td>9.2</td>
       <td>15.0</td>
       <td>3.4</td>
-      <td>15.0</td>
     </tr>
     <tr>
-      <th>477</th>
-      <td>McGoldrick</td>
+      <th>Benteke</th>
+      <td>Crystal Palace</td>
+      <td>Forward</td>
+      <td>11.272727</td>
+      <td>59.831986</td>
+      <td>5.5</td>
+      <td>16.0</td>
+      <td>4.2</td>
+    </tr>
+    <tr>
+      <th>McGoldrick</th>
       <td>Sheffield Utd</td>
       <td>Forward</td>
       <td>13.461538</td>
-      <td>66.639312</td>
+      <td>68.296214</td>
       <td>5.2</td>
-      <td>16.0</td>
-      <td>1.7</td>
-      <td>16.0</td>
+      <td>17.0</td>
+      <td>1.8</td>
     </tr>
     <tr>
-      <th>119</th>
-      <td>Wood</td>
+      <th>Wood</th>
       <td>Burnley</td>
       <td>Forward</td>
       <td>12.096774</td>
-      <td>76.086367</td>
+      <td>76.153043</td>
       <td>6.2</td>
-      <td>17.0</td>
-      <td>1.7</td>
-      <td>17.0</td>
+      <td>18.0</td>
+      <td>2.0</td>
     </tr>
     <tr>
-      <th>246</th>
-      <td>Decordova-Reid</td>
+      <th>Decordova-Reid</th>
       <td>Fulham</td>
       <td>Forward</td>
       <td>12.830189</td>
-      <td>68.415703</td>
+      <td>68.139496</td>
       <td>5.3</td>
-      <td>18.0</td>
-      <td>1.6</td>
-      <td>18.0</td>
-    </tr>
-    <tr>
-      <th>417</th>
-      <td>Martial</td>
-      <td>Man Utd</td>
-      <td>Forward</td>
-      <td>8.505747</td>
-      <td>87.153832</td>
-      <td>8.7</td>
       <td>19.0</td>
       <td>1.5</td>
-      <td>22.0</td>
     </tr>
     <tr>
-      <th>175</th>
-      <td>Benteke</td>
-      <td>Crystal Palace</td>
+      <th>Martial</th>
+      <td>Man Utd</td>
       <td>Forward</td>
-      <td>10.000000</td>
-      <td>53.793175</td>
-      <td>5.5</td>
+      <td>8.720930</td>
+      <td>84.506282</td>
+      <td>8.6</td>
       <td>20.0</td>
-      <td>2.5</td>
-      <td>19.0</td>
+      <td>2.0</td>
     </tr>
   </tbody>
 </table>
