--- a/templates/goalies.html
+++ b/templates/goalies.html
@@ -2,7 +2,6 @@
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>web_name</th>
       <th>team</th>
       <th>position</th>
       <th>value</th>
@@ -10,249 +9,218 @@
       <th>now_cost</th>
       <th>total_rank</th>
       <th>form</th>
-      <th>last_week_rank</th>
+    </tr>
+    <tr>
+      <th>web_name</th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th>33</th>
-      <td>Martínez</td>
+      <th>Martínez</th>
       <td>Aston Villa</td>
       <td>Goalkeeper</td>
       <td>27.592593</td>
-      <td>137.464835</td>
+      <td>138.234960</td>
       <td>5.4</td>
       <td>1.0</td>
-      <td>7.0</td>
-      <td>1.0</td>
+      <td>6.6</td>
     </tr>
     <tr>
-      <th>124</th>
-      <td>Pope</td>
+      <th>Pope</th>
       <td>Burnley</td>
       <td>Goalkeeper</td>
       <td>22.500000</td>
-      <td>124.756118</td>
+      <td>128.673403</td>
       <td>5.6</td>
       <td>2.0</td>
-      <td>3.7</td>
-      <td>2.0</td>
+      <td>4.0</td>
     </tr>
     <tr>
-      <th>261</th>
-      <td>Areola</td>
+      <th>Meslier</th>
+      <td>Leeds</td>
+      <td>Goalkeeper</td>
+      <td>24.130435</td>
+      <td>108.732626</td>
+      <td>4.6</td>
+      <td>3.0</td>
+      <td>4.4</td>
+    </tr>
+    <tr>
+      <th>Areola</th>
       <td>Fulham</td>
       <td>Goalkeeper</td>
-      <td>23.555556</td>
-      <td>100.520803</td>
+      <td>23.777778</td>
+      <td>101.337382</td>
       <td>4.5</td>
-      <td>3.0</td>
+      <td>4.0</td>
       <td>5.0</td>
-      <td>3.0</td>
     </tr>
     <tr>
-      <th>646</th>
-      <td>Patrício</td>
-      <td>Wolves</td>
-      <td>Goalkeeper</td>
-      <td>19.056604</td>
-      <td>101.973895</td>
-      <td>5.3</td>
-      <td>4.0</td>
-      <td>5.3</td>
-      <td>4.0</td>
-    </tr>
-    <tr>
-      <th>382</th>
-      <td>Ederson</td>
+      <th>Ederson</th>
       <td>Man City</td>
       <td>Goalkeeper</td>
-      <td>19.672131</td>
-      <td>122.912801</td>
+      <td>20.163934</td>
+      <td>125.563008</td>
       <td>6.1</td>
       <td>5.0</td>
-      <td>3.4</td>
-      <td>8.0</td>
+      <td>4.0</td>
     </tr>
     <tr>
-      <th>589</th>
-      <td>Johnstone</td>
+      <th>Johnstone</th>
       <td>West Brom</td>
       <td>Goalkeeper</td>
-      <td>20.444444</td>
-      <td>93.886887</td>
+      <td>20.666667</td>
+      <td>94.213358</td>
       <td>4.5</td>
       <td>6.0</td>
-      <td>5.3</td>
-      <td>5.0</td>
+      <td>6.2</td>
     </tr>
     <tr>
-      <th>543</th>
-      <td>Lloris</td>
+      <th>Lloris</th>
       <td>Spurs</td>
       <td>Goalkeeper</td>
-      <td>19.642857</td>
-      <td>109.960745</td>
+      <td>20.000000</td>
+      <td>114.861873</td>
       <td>5.6</td>
       <td>7.0</td>
       <td>4.2</td>
-      <td>6.0</td>
     </tr>
     <tr>
-      <th>323</th>
-      <td>Meslier</td>
-      <td>Leeds</td>
+      <th>Mendy</th>
+      <td>Chelsea</td>
       <td>Goalkeeper</td>
-      <td>22.173913</td>
-      <td>101.500260</td>
-      <td>4.6</td>
+      <td>20.392157</td>
+      <td>100.078436</td>
+      <td>5.1</td>
       <td>8.0</td>
-      <td>3.8</td>
-      <td>7.0</td>
+      <td>4.8</td>
     </tr>
     <tr>
-      <th>171</th>
-      <td>Guaita</td>
+      <th>Fabianski</th>
+      <td>West Ham</td>
+      <td>Goalkeeper</td>
+      <td>21.000000</td>
+      <td>102.398037</td>
+      <td>5.0</td>
+      <td>9.0</td>
+      <td>4.0</td>
+    </tr>
+    <tr>
+      <th>Patrício</th>
+      <td>Wolves</td>
+      <td>Goalkeeper</td>
+      <td>19.056604</td>
+      <td>102.446142</td>
+      <td>5.3</td>
+      <td>10.0</td>
+      <td>4.8</td>
+    </tr>
+    <tr>
+      <th>Guaita</th>
       <td>Crystal Palace</td>
       <td>Goalkeeper</td>
       <td>20.208333</td>
-      <td>97.208731</td>
+      <td>97.177981</td>
       <td>4.8</td>
-      <td>9.0</td>
-      <td>3.7</td>
-      <td>9.0</td>
+      <td>11.0</td>
+      <td>4.0</td>
     </tr>
     <tr>
-      <th>271</th>
-      <td>Schmeichel</td>
+      <th>Schmeichel</th>
       <td>Leicester</td>
       <td>Goalkeeper</td>
       <td>19.636364</td>
-      <td>108.997725</td>
+      <td>108.773223</td>
       <td>5.5</td>
-      <td>10.0</td>
-      <td>3.0</td>
-      <td>10.0</td>
-    </tr>
-    <tr>
-      <th>164</th>
-      <td>Mendy</td>
-      <td>Chelsea</td>
-      <td>Goalkeeper</td>
-      <td>19.215686</td>
-      <td>97.397049</td>
-      <td>5.1</td>
-      <td>11.0</td>
-      <td>3.5</td>
       <td>12.0</td>
+      <td>2.4</td>
     </tr>
     <tr>
-      <th>615</th>
-      <td>Fabianski</td>
-      <td>West Ham</td>
-      <td>Goalkeeper</td>
-      <td>19.800000</td>
-      <td>96.636397</td>
-      <td>5.0</td>
-      <td>12.0</td>
-      <td>3.2</td>
-      <td>11.0</td>
-    </tr>
-    <tr>
-      <th>7</th>
-      <td>Leno</td>
+      <th>Leno</th>
       <td>Arsenal</td>
       <td>Goalkeeper</td>
       <td>19.800000</td>
-      <td>98.701958</td>
+      <td>99.071580</td>
       <td>5.0</td>
       <td>13.0</td>
-      <td>2.2</td>
-      <td>13.0</td>
+      <td>2.8</td>
     </tr>
     <tr>
-      <th>495</th>
-      <td>Ramsdale</td>
+      <th>Pickford</th>
+      <td>Everton</td>
+      <td>Goalkeeper</td>
+      <td>16.458333</td>
+      <td>78.499109</td>
+      <td>4.8</td>
+      <td>14.0</td>
+      <td>4.8</td>
+    </tr>
+    <tr>
+      <th>Ramsdale</th>
       <td>Sheffield Utd</td>
       <td>Goalkeeper</td>
       <td>16.956522</td>
-      <td>77.611824</td>
+      <td>77.706224</td>
       <td>4.6</td>
-      <td>14.0</td>
-      <td>3.7</td>
-      <td>14.0</td>
+      <td>15.0</td>
+      <td>4.2</td>
     </tr>
     <tr>
-      <th>208</th>
-      <td>Pickford</td>
-      <td>Everton</td>
-      <td>Goalkeeper</td>
-      <td>15.833333</td>
-      <td>75.469168</td>
-      <td>4.8</td>
-      <td>15.0</td>
-      <td>3.7</td>
-      <td>15.0</td>
-    </tr>
-    <tr>
-      <th>406</th>
-      <td>de Gea</td>
+      <th>de Gea</th>
       <td>Man Utd</td>
       <td>Goalkeeper</td>
       <td>16.415094</td>
-      <td>86.976706</td>
+      <td>88.276404</td>
       <td>5.3</td>
       <td>16.0</td>
-      <td>2.5</td>
-      <td>16.0</td>
+      <td>2.8</td>
     </tr>
     <tr>
-      <th>511</th>
-      <td>McCarthy</td>
+      <th>McCarthy</th>
       <td>Southampton</td>
       <td>Goalkeeper</td>
-      <td>18.000000</td>
-      <td>77.277138</td>
+      <td>18.222222</td>
+      <td>79.888084</td>
       <td>4.5</td>
       <td>17.0</td>
-      <td>0.7</td>
-      <td>17.0</td>
+      <td>0.8</td>
     </tr>
     <tr>
-      <th>447</th>
-      <td>Darlow</td>
-      <td>Newcastle</td>
-      <td>Goalkeeper</td>
-      <td>16.000000</td>
-      <td>82.708188</td>
-      <td>5.0</td>
-      <td>18.0</td>
-      <td>1.0</td>
-      <td>18.0</td>
-    </tr>
-    <tr>
-      <th>347</th>
-      <td>Alisson</td>
+      <th>Alisson</th>
       <td>Liverpool</td>
       <td>Goalkeeper</td>
       <td>13.559322</td>
-      <td>85.076981</td>
+      <td>85.779249</td>
       <td>5.9</td>
-      <td>19.0</td>
-      <td>1.5</td>
-      <td>19.0</td>
+      <td>18.0</td>
+      <td>1.8</td>
     </tr>
     <tr>
-      <th>98</th>
-      <td>Sánchez</td>
+      <th>Darlow</th>
+      <td>Newcastle</td>
+      <td>Goalkeeper</td>
+      <td>16.000000</td>
+      <td>82.756330</td>
+      <td>5.0</td>
+      <td>19.0</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <th>Sánchez</th>
       <td>Brighton</td>
       <td>Goalkeeper</td>
       <td>13.777778</td>
-      <td>59.203031</td>
+      <td>59.444883</td>
       <td>4.5</td>
       <td>20.0</td>
-      <td>3.0</td>
-      <td>20.0</td>
+      <td>2.5</td>
     </tr>
   </tbody>
 </table>
