--- a/templates/defenders.html
+++ b/templates/defenders.html
@@ -2,7 +2,6 @@
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>web_name</th>
       <th>team</th>
       <th>position</th>
       <th>value</th>
@@ -10,249 +9,218 @@
       <th>now_cost</th>
       <th>total_rank</th>
       <th>form</th>
-      <th>last_week_rank</th>
+    </tr>
+    <tr>
+      <th>web_name</th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th>310</th>
-      <td>Dallas</td>
-      <td>Leeds</td>
-      <td>Defender</td>
-      <td>22.600000</td>
-      <td>108.316350</td>
-      <td>5.0</td>
-      <td>1.0</td>
-      <td>5.0</td>
-      <td>1.0</td>
-    </tr>
-    <tr>
-      <th>619</th>
-      <td>Cresswell</td>
+      <th>Cresswell</th>
       <td>West Ham</td>
       <td>Defender</td>
-      <td>20.862069</td>
-      <td>115.017799</td>
+      <td>22.931034</td>
+      <td>123.165657</td>
       <td>5.8</td>
-      <td>2.0</td>
-      <td>4.8</td>
-      <td>2.0</td>
+      <td>1.0</td>
+      <td>6.8</td>
     </tr>
     <tr>
-      <th>48</th>
-      <td>Targett</td>
+      <th>Shaw</th>
+      <td>Man Utd</td>
+      <td>Defender</td>
+      <td>19.038462</td>
+      <td>96.637982</td>
+      <td>5.2</td>
+      <td>2.0</td>
+      <td>7.2</td>
+    </tr>
+    <tr>
+      <th>Wan-Bissaka</th>
+      <td>Man Utd</td>
+      <td>Defender</td>
+      <td>20.535714</td>
+      <td>112.471277</td>
+      <td>5.6</td>
+      <td>3.0</td>
+      <td>4.4</td>
+    </tr>
+    <tr>
+      <th>Targett</th>
       <td>Aston Villa</td>
       <td>Defender</td>
       <td>22.400000</td>
-      <td>106.613490</td>
+      <td>105.393505</td>
       <td>5.0</td>
-      <td>3.0</td>
-      <td>4.5</td>
-      <td>3.0</td>
+      <td>4.0</td>
+      <td>4.0</td>
     </tr>
     <tr>
-      <th>47</th>
-      <td>Mings</td>
+      <th>Dias</th>
+      <td>Man City</td>
+      <td>Defender</td>
+      <td>19.836066</td>
+      <td>122.422407</td>
+      <td>6.1</td>
+      <td>5.0</td>
+      <td>3.3</td>
+    </tr>
+    <tr>
+      <th>Dallas</th>
+      <td>Leeds</td>
+      <td>Defender</td>
+      <td>22.800000</td>
+      <td>99.330772</td>
+      <td>5.0</td>
+      <td>6.0</td>
+      <td>3.8</td>
+    </tr>
+    <tr>
+      <th>Mings</th>
       <td>Aston Villa</td>
       <td>Defender</td>
       <td>19.814815</td>
-      <td>106.447972</td>
+      <td>106.209343</td>
       <td>5.4</td>
-      <td>4.0</td>
-      <td>4.8</td>
-      <td>4.0</td>
-    </tr>
-    <tr>
-      <th>397</th>
-      <td>Dias</td>
-      <td>Man City</td>
-      <td>Defender</td>
-      <td>19.672131</td>
-      <td>121.433086</td>
-      <td>6.1</td>
-      <td>5.0</td>
-      <td>2.9</td>
-      <td>5.0</td>
-    </tr>
-    <tr>
-      <th>427</th>
-      <td>Wan-Bissaka</td>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>19.642857</td>
-      <td>111.224732</td>
-      <td>5.6</td>
-      <td>6.0</td>
-      <td>3.5</td>
       <td>7.0</td>
-    </tr>
-    <tr>
-      <th>52</th>
-      <td>Konsa</td>
-      <td>Aston Villa</td>
-      <td>Defender</td>
-      <td>21.086957</td>
-      <td>90.501389</td>
       <td>4.6</td>
-      <td>7.0</td>
-      <td>4.5</td>
-      <td>6.0</td>
     </tr>
     <tr>
-      <th>350</th>
-      <td>Robertson</td>
-      <td>Liverpool</td>
-      <td>Defender</td>
-      <td>14.861111</td>
-      <td>139.867853</td>
-      <td>7.2</td>
-      <td>8.0</td>
-      <td>2.2</td>
-      <td>8.0</td>
-    </tr>
-    <tr>
-      <th>413</th>
-      <td>Maguire</td>
+      <th>Maguire</th>
       <td>Man Utd</td>
       <td>Defender</td>
-      <td>18.363636</td>
-      <td>103.715977</td>
+      <td>19.090909</td>
+      <td>103.930407</td>
       <td>5.5</td>
-      <td>9.0</td>
-      <td>3.7</td>
-      <td>10.0</td>
+      <td>8.0</td>
+      <td>5.0</td>
     </tr>
     <tr>
-      <th>377</th>
-      <td>Stones</td>
+      <th>Stones</th>
       <td>Man City</td>
       <td>Defender</td>
       <td>20.377358</td>
-      <td>99.205941</td>
+      <td>105.326146</td>
       <td>5.3</td>
-      <td>10.0</td>
-      <td>3.1</td>
-      <td>13.0</td>
+      <td>9.0</td>
+      <td>3.3</td>
     </tr>
     <tr>
-      <th>265</th>
-      <td>Aina</td>
+      <th>Aina</th>
       <td>Fulham</td>
       <td>Defender</td>
       <td>20.000000</td>
-      <td>76.054949</td>
+      <td>78.069480</td>
       <td>4.5</td>
-      <td>11.0</td>
-      <td>5.3</td>
-      <td>9.0</td>
+      <td>10.0</td>
+      <td>6.2</td>
     </tr>
     <tr>
-      <th>267</th>
-      <td>Adarabioyo</td>
+      <th>Konsa</th>
+      <td>Aston Villa</td>
+      <td>Defender</td>
+      <td>21.086957</td>
+      <td>88.851400</td>
+      <td>4.6</td>
+      <td>11.0</td>
+      <td>4.4</td>
+    </tr>
+    <tr>
+      <th>Adarabioyo</th>
       <td>Fulham</td>
       <td>Defender</td>
-      <td>19.111111</td>
-      <td>82.081009</td>
+      <td>19.777778</td>
+      <td>85.099581</td>
       <td>4.5</td>
       <td>12.0</td>
-      <td>5.0</td>
-      <td>11.0</td>
+      <td>5.3</td>
     </tr>
     <tr>
-      <th>207</th>
-      <td>Keane</td>
+      <th>Azpilicueta</th>
+      <td>Chelsea</td>
+      <td>Defender</td>
+      <td>15.964912</td>
+      <td>95.074838</td>
+      <td>5.7</td>
+      <td>13.0</td>
+      <td>6.2</td>
+    </tr>
+    <tr>
+      <th>Keane</th>
       <td>Everton</td>
       <td>Defender</td>
-      <td>18.823529</td>
-      <td>93.862138</td>
+      <td>19.019608</td>
+      <td>94.441316</td>
       <td>5.1</td>
-      <td>13.0</td>
-      <td>4.0</td>
-      <td>12.0</td>
-    </tr>
-    <tr>
-      <th>649</th>
-      <td>Coady</td>
-      <td>Wolves</td>
-      <td>Defender</td>
-      <td>17.291667</td>
-      <td>82.862355</td>
-      <td>4.8</td>
       <td>14.0</td>
-      <td>5.3</td>
-      <td>14.0</td>
+      <td>4.3</td>
     </tr>
     <tr>
-      <th>266</th>
-      <td>Andersen</td>
-      <td>Fulham</td>
-      <td>Defender</td>
-      <td>17.333333</td>
-      <td>75.658651</td>
-      <td>4.5</td>
-      <td>15.0</td>
-      <td>5.7</td>
-      <td>15.0</td>
-    </tr>
-    <tr>
-      <th>381</th>
-      <td>Cancelo</td>
+      <th>Cancelo</th>
       <td>Man City</td>
       <td>Defender</td>
       <td>17.741935</td>
-      <td>112.378139</td>
+      <td>114.245035</td>
       <td>6.2</td>
+      <td>15.0</td>
+      <td>2.3</td>
+    </tr>
+    <tr>
+      <th>Andersen</th>
+      <td>Fulham</td>
+      <td>Defender</td>
+      <td>17.555556</td>
+      <td>77.705253</td>
+      <td>4.5</td>
       <td>16.0</td>
-      <td>2.2</td>
-      <td>16.0</td>
+      <td>5.8</td>
     </tr>
     <tr>
-      <th>415</th>
-      <td>Shaw</td>
-      <td>Man Utd</td>
+      <th>Coufal</th>
+      <td>West Ham</td>
       <td>Defender</td>
-      <td>16.862745</td>
-      <td>87.172418</td>
-      <td>5.1</td>
+      <td>19.347826</td>
+      <td>86.296821</td>
+      <td>4.6</td>
       <td>17.0</td>
-      <td>4.3</td>
-      <td>17.0</td>
+      <td>3.8</td>
     </tr>
     <tr>
-      <th>75</th>
-      <td>Dunk</td>
-      <td>Brighton</td>
+      <th>Coady</th>
+      <td>Wolves</td>
       <td>Defender</td>
-      <td>17.346939</td>
-      <td>84.477424</td>
-      <td>4.9</td>
+      <td>17.291667</td>
+      <td>82.661053</td>
+      <td>4.8</td>
       <td>18.0</td>
-      <td>4.0</td>
-      <td>18.0</td>
+      <td>5.2</td>
     </tr>
     <tr>
-      <th>292</th>
-      <td>Justin</td>
-      <td>Leicester</td>
+      <th>Robertson</th>
+      <td>Liverpool</td>
       <td>Defender</td>
-      <td>20.612245</td>
-      <td>89.926794</td>
-      <td>4.9</td>
+      <td>14.861111</td>
+      <td>119.803287</td>
+      <td>7.2</td>
       <td>19.0</td>
-      <td>1.5</td>
-      <td>20.0</td>
+      <td>2.6</td>
     </tr>
     <tr>
-      <th>120</th>
-      <td>Lowton</td>
+      <th>Lowton</th>
       <td>Burnley</td>
       <td>Defender</td>
       <td>18.000000</td>
-      <td>72.565644</td>
+      <td>74.465364</td>
       <td>4.5</td>
       <td>20.0</td>
-      <td>4.1</td>
-      <td>19.0</td>
+      <td>4.5</td>
     </tr>
   </tbody>
 </table>
