--- a/templates/midfielders.html
+++ b/templates/midfielders.html
@@ -2,7 +2,6 @@
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>web_name</th>
       <th>team</th>
       <th>position</th>
       <th>value</th>
@@ -10,249 +9,218 @@
       <th>now_cost</th>
       <th>total_rank</th>
       <th>form</th>
-      <th>last_week_rank</th>
+    </tr>
+    <tr>
+      <th>web_name</th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th>416</th>
-      <td>Fernandes</td>
+      <th>Fernandes</th>
       <td>Man Utd</td>
       <td>Midfielder</td>
-      <td>17.565217</td>
-      <td>213.144543</td>
+      <td>17.913043</td>
+      <td>207.903234</td>
       <td>11.5</td>
       <td>1.0</td>
-      <td>6.7</td>
-      <td>1.0</td>
+      <td>7.4</td>
     </tr>
     <tr>
-      <th>349</th>
-      <td>Salah</td>
+      <th>Salah</th>
       <td>Liverpool</td>
       <td>Midfielder</td>
       <td>13.680000</td>
-      <td>232.695198</td>
+      <td>239.851570</td>
       <td>12.5</td>
       <td>2.0</td>
-      <td>3.8</td>
-      <td>2.0</td>
+      <td>3.2</td>
     </tr>
     <tr>
-      <th>550</th>
-      <td>Son</td>
+      <th>Son</th>
       <td>Spurs</td>
       <td>Midfielder</td>
-      <td>18.020833</td>
-      <td>175.607712</td>
+      <td>18.541667</td>
+      <td>186.658549</td>
       <td>9.6</td>
       <td>3.0</td>
-      <td>4.7</td>
-      <td>3.0</td>
+      <td>4.6</td>
     </tr>
     <tr>
-      <th>375</th>
-      <td>Gündogan</td>
+      <th>Gündogan</th>
       <td>Man City</td>
       <td>Midfielder</td>
-      <td>21.451613</td>
-      <td>108.704986</td>
+      <td>22.903226</td>
+      <td>129.590809</td>
       <td>6.2</td>
       <td>4.0</td>
-      <td>5.2</td>
-      <td>4.0</td>
+      <td>5.4</td>
     </tr>
     <tr>
-      <th>288</th>
-      <td>Barnes</td>
+      <th>Mahrez</th>
+      <td>Man City</td>
+      <td>Midfielder</td>
+      <td>15.925926</td>
+      <td>147.121213</td>
+      <td>8.1</td>
+      <td>5.0</td>
+      <td>7.7</td>
+    </tr>
+    <tr>
+      <th>De Bruyne</th>
+      <td>Man City</td>
+      <td>Midfielder</td>
+      <td>10.593220</td>
+      <td>212.977952</td>
+      <td>11.8</td>
+      <td>6.0</td>
+      <td>4.3</td>
+    </tr>
+    <tr>
+      <th>Rashford</th>
+      <td>Man Utd</td>
+      <td>Midfielder</td>
+      <td>14.375000</td>
+      <td>158.437431</td>
+      <td>9.6</td>
+      <td>7.0</td>
+      <td>5.2</td>
+    </tr>
+    <tr>
+      <th>Ward-Prowse</th>
+      <td>Southampton</td>
+      <td>Midfielder</td>
+      <td>21.016949</td>
+      <td>119.207358</td>
+      <td>5.9</td>
+      <td>8.0</td>
+      <td>4.3</td>
+    </tr>
+    <tr>
+      <th>Barnes</th>
       <td>Leicester</td>
       <td>Midfielder</td>
       <td>18.529412</td>
-      <td>118.984540</td>
+      <td>121.939118</td>
       <td>6.8</td>
-      <td>5.0</td>
-      <td>4.8</td>
-      <td>5.0</td>
+      <td>9.0</td>
+      <td>5.2</td>
     </tr>
     <tr>
-      <th>156</th>
-      <td>Mount</td>
-      <td>Chelsea</td>
-      <td>Midfielder</td>
-      <td>16.376812</td>
-      <td>118.567283</td>
-      <td>6.9</td>
-      <td>6.0</td>
-      <td>5.8</td>
-      <td>6.0</td>
-    </tr>
-    <tr>
-      <th>518</th>
-      <td>Ward-Prowse</td>
-      <td>Southampton</td>
-      <td>Midfielder</td>
-      <td>19.830508</td>
-      <td>117.988453</td>
-      <td>5.9</td>
-      <td>7.0</td>
-      <td>4.0</td>
-      <td>7.0</td>
-    </tr>
-    <tr>
-      <th>380</th>
-      <td>Sterling</td>
+      <th>Sterling</th>
       <td>Man City</td>
       <td>Midfielder</td>
-      <td>11.293103</td>
-      <td>183.966138</td>
-      <td>11.6</td>
-      <td>8.0</td>
-      <td>3.2</td>
-      <td>8.0</td>
+      <td>11.478261</td>
+      <td>196.256008</td>
+      <td>11.5</td>
+      <td>10.0</td>
+      <td>2.7</td>
     </tr>
     <tr>
-      <th>663</th>
-      <td>Neto</td>
+      <th>Mount</th>
+      <td>Chelsea</td>
+      <td>Midfielder</td>
+      <td>16.285714</td>
+      <td>121.047810</td>
+      <td>7.0</td>
+      <td>11.0</td>
+      <td>5.6</td>
+    </tr>
+    <tr>
+      <th>Neto</th>
       <td>Wolves</td>
       <td>Midfielder</td>
       <td>20.350877</td>
-      <td>109.873270</td>
+      <td>107.615287</td>
       <td>5.7</td>
-      <td>9.0</td>
-      <td>3.3</td>
-      <td>10.0</td>
+      <td>12.0</td>
+      <td>3.4</td>
     </tr>
     <tr>
-      <th>420</th>
-      <td>Rashford</td>
-      <td>Man Utd</td>
-      <td>Midfielder</td>
-      <td>13.854167</td>
-      <td>138.589220</td>
-      <td>9.6</td>
-      <td>10.0</td>
-      <td>4.3</td>
-      <td>9.0</td>
-    </tr>
-    <tr>
-      <th>656</th>
-      <td>Neves</td>
+      <th>Neves</th>
       <td>Wolves</td>
       <td>Midfielder</td>
       <td>17.450980</td>
-      <td>85.051099</td>
+      <td>87.214584</td>
       <td>5.1</td>
-      <td>11.0</td>
-      <td>5.5</td>
-      <td>11.0</td>
+      <td>13.0</td>
+      <td>6.2</td>
     </tr>
     <tr>
-      <th>282</th>
-      <td>Tielemans</td>
-      <td>Leicester</td>
+      <th>Soucek</th>
+      <td>West Ham</td>
       <td>Midfielder</td>
-      <td>16.875000</td>
-      <td>114.040143</td>
-      <td>6.4</td>
-      <td>12.0</td>
-      <td>3.2</td>
-      <td>13.0</td>
+      <td>21.698113</td>
+      <td>104.941843</td>
+      <td>5.3</td>
+      <td>14.0</td>
+      <td>2.2</td>
     </tr>
     <tr>
-      <th>379</th>
-      <td>Mahrez</td>
-      <td>Man City</td>
+      <th>Aubameyang</th>
+      <td>Arsenal</td>
       <td>Midfielder</td>
-      <td>13.580247</td>
-      <td>115.977660</td>
-      <td>8.1</td>
-      <td>13.0</td>
-      <td>4.6</td>
+      <td>9.122807</td>
+      <td>121.319964</td>
+      <td>11.4</td>
       <td>15.0</td>
+      <td>7.8</td>
     </tr>
     <tr>
-      <th>285</th>
-      <td>Maddison</td>
+      <th>Maddison</th>
       <td>Leicester</td>
       <td>Midfielder</td>
       <td>16.527778</td>
-      <td>113.867574</td>
+      <td>121.124784</td>
       <td>7.2</td>
-      <td>14.0</td>
-      <td>3.2</td>
-      <td>14.0</td>
+      <td>16.0</td>
+      <td>3.4</td>
     </tr>
     <tr>
-      <th>3</th>
-      <td>Aubameyang</td>
-      <td>Arsenal</td>
+      <th>Tielemans</th>
+      <td>Leicester</td>
       <td>Midfielder</td>
-      <td>9.203540</td>
-      <td>119.437649</td>
-      <td>11.3</td>
-      <td>15.0</td>
+      <td>16.875000</td>
+      <td>113.691006</td>
       <td>6.4</td>
-      <td>12.0</td>
-    </tr>
-    <tr>
-      <th>331</th>
-      <td>Raphinha</td>
-      <td>Leeds</td>
-      <td>Midfielder</td>
-      <td>17.090909</td>
-      <td>89.212069</td>
-      <td>5.5</td>
-      <td>16.0</td>
-      <td>4.2</td>
-      <td>16.0</td>
-    </tr>
-    <tr>
-      <th>43</th>
-      <td>Grealish</td>
-      <td>Aston Villa</td>
-      <td>Midfielder</td>
-      <td>16.973684</td>
-      <td>133.157784</td>
-      <td>7.6</td>
       <td>17.0</td>
-      <td>0.7</td>
-      <td>17.0</td>
+      <td>3.2</td>
     </tr>
     <tr>
-      <th>313</th>
-      <td>Harrison</td>
-      <td>Leeds</td>
-      <td>Midfielder</td>
-      <td>18.518519</td>
-      <td>94.804195</td>
-      <td>5.4</td>
-      <td>18.0</td>
-      <td>2.3</td>
-      <td>18.0</td>
-    </tr>
-    <tr>
-      <th>632</th>
-      <td>Soucek</td>
-      <td>West Ham</td>
-      <td>Midfielder</td>
-      <td>21.132075</td>
-      <td>85.542238</td>
-      <td>5.3</td>
-      <td>19.0</td>
-      <td>1.2</td>
-      <td>19.0</td>
-    </tr>
-    <tr>
-      <th>388</th>
-      <td>Foden</td>
+      <th>Foden</th>
       <td>Man City</td>
       <td>Midfielder</td>
-      <td>15.573770</td>
-      <td>90.319033</td>
+      <td>17.540984</td>
+      <td>105.182589</td>
       <td>6.1</td>
+      <td>18.0</td>
+      <td>3.4</td>
+    </tr>
+    <tr>
+      <th>Raphinha</th>
+      <td>Leeds</td>
+      <td>Midfielder</td>
+      <td>17.454545</td>
+      <td>94.491186</td>
+      <td>5.5</td>
+      <td>19.0</td>
+      <td>4.2</td>
+    </tr>
+    <tr>
+      <th>Grealish</th>
+      <td>Aston Villa</td>
+      <td>Midfielder</td>
+      <td>17.200000</td>
+      <td>131.634628</td>
+      <td>7.5</td>
       <td>20.0</td>
-      <td>3.5</td>
-      <td>20.0</td>
+      <td>0.4</td>
     </tr>
   </tbody>
 </table>
