updated with data for GW28

--- a/templates/defenders.html
+++ b/templates/defenders.html
@@ -26,201 +26,201 @@
       <th>Cresswell</th>
       <td>West Ham</td>
       <td>Defender</td>
-      <td>22.931034</td>
-      <td>123.165657</td>
-      <td>5.8</td>
+      <td>22.881356</td>
+      <td>111.393523</td>
+      <td>5.9</td>
       <td>1.0</td>
-      <td>6.8</td>
+      <td>5.8</td>
     </tr>
     <tr>
       <th>Shaw</th>
       <td>Man Utd</td>
       <td>Defender</td>
-      <td>19.038462</td>
-      <td>96.637982</td>
+      <td>20.769231</td>
+      <td>103.551548</td>
       <td>5.2</td>
       <td>2.0</td>
-      <td>7.2</td>
-    </tr>
-    <tr>
-      <th>Wan-Bissaka</th>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>20.535714</td>
-      <td>112.471277</td>
-      <td>5.6</td>
-      <td>3.0</td>
-      <td>4.4</td>
-    </tr>
-    <tr>
-      <th>Targett</th>
-      <td>Aston Villa</td>
-      <td>Defender</td>
-      <td>22.400000</td>
-      <td>105.393505</td>
-      <td>5.0</td>
-      <td>4.0</td>
-      <td>4.0</td>
+      <td>7.5</td>
     </tr>
     <tr>
       <th>Dias</th>
       <td>Man City</td>
       <td>Defender</td>
-      <td>19.836066</td>
-      <td>122.422407</td>
+      <td>20.819672</td>
+      <td>128.191447</td>
       <td>6.1</td>
-      <td>5.0</td>
-      <td>3.3</td>
-    </tr>
-    <tr>
-      <th>Dallas</th>
-      <td>Leeds</td>
-      <td>Defender</td>
-      <td>22.800000</td>
-      <td>99.330772</td>
-      <td>5.0</td>
-      <td>6.0</td>
-      <td>3.8</td>
-    </tr>
-    <tr>
-      <th>Mings</th>
-      <td>Aston Villa</td>
-      <td>Defender</td>
-      <td>19.814815</td>
-      <td>106.209343</td>
-      <td>5.4</td>
-      <td>7.0</td>
-      <td>4.6</td>
-    </tr>
-    <tr>
-      <th>Maguire</th>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>19.090909</td>
-      <td>103.930407</td>
-      <td>5.5</td>
-      <td>8.0</td>
-      <td>5.0</td>
+      <td>3.0</td>
+      <td>4.1</td>
     </tr>
     <tr>
       <th>Stones</th>
       <td>Man City</td>
       <td>Defender</td>
-      <td>20.377358</td>
-      <td>105.326146</td>
+      <td>23.018868</td>
+      <td>113.313110</td>
       <td>5.3</td>
-      <td>9.0</td>
-      <td>3.3</td>
-    </tr>
-    <tr>
-      <th>Aina</th>
-      <td>Fulham</td>
-      <td>Defender</td>
-      <td>20.000000</td>
-      <td>78.069480</td>
-      <td>4.5</td>
-      <td>10.0</td>
-      <td>6.2</td>
-    </tr>
-    <tr>
-      <th>Konsa</th>
-      <td>Aston Villa</td>
-      <td>Defender</td>
-      <td>21.086957</td>
-      <td>88.851400</td>
-      <td>4.6</td>
-      <td>11.0</td>
+      <td>4.0</td>
       <td>4.4</td>
     </tr>
     <tr>
-      <th>Adarabioyo</th>
-      <td>Fulham</td>
+      <th>Maguire</th>
+      <td>Man Utd</td>
       <td>Defender</td>
-      <td>19.777778</td>
-      <td>85.099581</td>
-      <td>4.5</td>
-      <td>12.0</td>
-      <td>5.3</td>
+      <td>20.545455</td>
+      <td>113.839266</td>
+      <td>5.5</td>
+      <td>5.0</td>
+      <td>5.5</td>
     </tr>
     <tr>
-      <th>Azpilicueta</th>
-      <td>Chelsea</td>
+      <th>Wan-Bissaka</th>
+      <td>Man Utd</td>
       <td>Defender</td>
-      <td>15.964912</td>
-      <td>95.074838</td>
+      <td>21.052632</td>
+      <td>119.709913</td>
       <td>5.7</td>
-      <td>13.0</td>
-      <td>6.2</td>
+      <td>6.0</td>
+      <td>4.5</td>
     </tr>
     <tr>
-      <th>Keane</th>
-      <td>Everton</td>
+      <th>Dallas</th>
+      <td>Leeds</td>
       <td>Defender</td>
-      <td>19.019608</td>
-      <td>94.441316</td>
+      <td>23.529412</td>
+      <td>108.032308</td>
       <td>5.1</td>
-      <td>14.0</td>
-      <td>4.3</td>
+      <td>7.0</td>
+      <td>4.2</td>
+    </tr>
+    <tr>
+      <th>Targett</th>
+      <td>Aston Villa</td>
+      <td>Defender</td>
+      <td>23.200000</td>
+      <td>110.281016</td>
+      <td>5.0</td>
+      <td>8.0</td>
+      <td>3.6</td>
     </tr>
     <tr>
       <th>Cancelo</th>
       <td>Man City</td>
       <td>Defender</td>
-      <td>17.741935</td>
-      <td>114.245035</td>
+      <td>19.677419</td>
+      <td>122.096299</td>
       <td>6.2</td>
-      <td>15.0</td>
-      <td>2.3</td>
+      <td>9.0</td>
+      <td>3.1</td>
     </tr>
     <tr>
-      <th>Andersen</th>
+      <th>Azpilicueta</th>
+      <td>Chelsea</td>
+      <td>Defender</td>
+      <td>16.724138</td>
+      <td>102.579024</td>
+      <td>5.8</td>
+      <td>10.0</td>
+      <td>6.2</td>
+    </tr>
+    <tr>
+      <th>Mings</th>
+      <td>Aston Villa</td>
+      <td>Defender</td>
+      <td>20.000000</td>
+      <td>109.258320</td>
+      <td>5.4</td>
+      <td>11.0</td>
+      <td>3.6</td>
+    </tr>
+    <tr>
+      <th>Aina</th>
       <td>Fulham</td>
       <td>Defender</td>
-      <td>17.555556</td>
-      <td>77.705253</td>
+      <td>20.222222</td>
+      <td>87.384945</td>
       <td>4.5</td>
-      <td>16.0</td>
-      <td>5.8</td>
+      <td>12.0</td>
+      <td>5.4</td>
     </tr>
     <tr>
-      <th>Coufal</th>
-      <td>West Ham</td>
+      <th>Alexander-Arnold</th>
+      <td>Liverpool</td>
       <td>Defender</td>
-      <td>19.347826</td>
-      <td>86.296821</td>
+      <td>12.876712</td>
+      <td>135.037385</td>
+      <td>7.3</td>
+      <td>13.0</td>
+      <td>4.4</td>
+    </tr>
+    <tr>
+      <th>Konsa</th>
+      <td>Aston Villa</td>
+      <td>Defender</td>
+      <td>21.521739</td>
+      <td>94.720542</td>
       <td>4.6</td>
-      <td>17.0</td>
-      <td>3.8</td>
-    </tr>
-    <tr>
-      <th>Coady</th>
-      <td>Wolves</td>
-      <td>Defender</td>
-      <td>17.291667</td>
-      <td>82.661053</td>
-      <td>4.8</td>
-      <td>18.0</td>
-      <td>5.2</td>
+      <td>14.0</td>
+      <td>3.6</td>
     </tr>
     <tr>
       <th>Robertson</th>
       <td>Liverpool</td>
       <td>Defender</td>
-      <td>14.861111</td>
-      <td>119.803287</td>
-      <td>7.2</td>
-      <td>19.0</td>
-      <td>2.6</td>
+      <td>15.915493</td>
+      <td>123.110298</td>
+      <td>7.1</td>
+      <td>15.0</td>
+      <td>3.6</td>
     </tr>
     <tr>
-      <th>Lowton</th>
-      <td>Burnley</td>
+      <th>Adarabioyo</th>
+      <td>Fulham</td>
       <td>Defender</td>
-      <td>18.000000</td>
-      <td>74.465364</td>
+      <td>20.000000</td>
+      <td>86.327863</td>
       <td>4.5</td>
+      <td>16.0</td>
+      <td>4.7</td>
+    </tr>
+    <tr>
+      <th>Keane</th>
+      <td>Everton</td>
+      <td>Defender</td>
+      <td>19.215686</td>
+      <td>98.111094</td>
+      <td>5.1</td>
+      <td>17.0</td>
+      <td>3.9</td>
+    </tr>
+    <tr>
+      <th>Dunk</th>
+      <td>Brighton</td>
+      <td>Defender</td>
+      <td>19.000000</td>
+      <td>95.446653</td>
+      <td>5.0</td>
+      <td>18.0</td>
+      <td>3.5</td>
+    </tr>
+    <tr>
+      <th>Coady</th>
+      <td>Wolves</td>
+      <td>Defender</td>
+      <td>17.708333</td>
+      <td>82.884059</td>
+      <td>4.8</td>
+      <td>19.0</td>
+      <td>5.2</td>
+    </tr>
+    <tr>
+      <th>Coufal</th>
+      <td>West Ham</td>
+      <td>Defender</td>
+      <td>19.782609</td>
+      <td>87.695188</td>
+      <td>4.6</td>
       <td>20.0</td>
-      <td>4.5</td>
+      <td>3.4</td>
     </tr>
   </tbody>
 </table>
