--- a/templates/midfielders.html
+++ b/templates/midfielders.html
@@ -26,90 +26,80 @@
       <th>Fernandes</th>
       <td>Man Utd</td>
       <td>Midfielder</td>
-      <td>17.913043</td>
-      <td>207.903234</td>
+      <td>18.173913</td>
+      <td>211.697519</td>
       <td>11.5</td>
       <td>1.0</td>
-      <td>7.4</td>
-    </tr>
-    <tr>
-      <th>Salah</th>
-      <td>Liverpool</td>
-      <td>Midfielder</td>
-      <td>13.680000</td>
-      <td>239.851570</td>
-      <td>12.5</td>
-      <td>2.0</td>
-      <td>3.2</td>
+      <td>6.7</td>
     </tr>
     <tr>
       <th>Son</th>
       <td>Spurs</td>
       <td>Midfielder</td>
-      <td>18.541667</td>
-      <td>186.658549</td>
+      <td>18.645833</td>
+      <td>177.369475</td>
       <td>9.6</td>
-      <td>3.0</td>
-      <td>4.6</td>
-    </tr>
-    <tr>
-      <th>Gündogan</th>
-      <td>Man City</td>
-      <td>Midfielder</td>
-      <td>22.903226</td>
-      <td>129.590809</td>
-      <td>6.2</td>
-      <td>4.0</td>
-      <td>5.4</td>
+      <td>2.0</td>
+      <td>4.4</td>
     </tr>
     <tr>
       <th>Mahrez</th>
       <td>Man City</td>
       <td>Midfielder</td>
       <td>15.925926</td>
-      <td>147.121213</td>
+      <td>135.133192</td>
       <td>8.1</td>
-      <td>5.0</td>
-      <td>7.7</td>
+      <td>3.0</td>
+      <td>7.6</td>
     </tr>
     <tr>
-      <th>De Bruyne</th>
-      <td>Man City</td>
+      <th>Salah</th>
+      <td>Liverpool</td>
       <td>Midfielder</td>
-      <td>10.593220</td>
-      <td>212.977952</td>
-      <td>11.8</td>
-      <td>6.0</td>
-      <td>4.3</td>
-    </tr>
-    <tr>
-      <th>Rashford</th>
-      <td>Man Utd</td>
-      <td>Midfielder</td>
-      <td>14.375000</td>
-      <td>158.437431</td>
-      <td>9.6</td>
-      <td>7.0</td>
-      <td>5.2</td>
+      <td>14.032258</td>
+      <td>200.090247</td>
+      <td>12.4</td>
+      <td>4.0</td>
+      <td>2.4</td>
     </tr>
     <tr>
       <th>Ward-Prowse</th>
       <td>Southampton</td>
       <td>Midfielder</td>
-      <td>21.016949</td>
-      <td>119.207358</td>
+      <td>21.355932</td>
+      <td>120.676934</td>
       <td>5.9</td>
-      <td>8.0</td>
+      <td>5.0</td>
       <td>4.3</td>
     </tr>
     <tr>
-      <th>Barnes</th>
-      <td>Leicester</td>
+      <th>Gündogan</th>
+      <td>Man City</td>
       <td>Midfielder</td>
-      <td>18.529412</td>
-      <td>121.939118</td>
-      <td>6.8</td>
-      <td>9.0</td>
+      <td>22.903226</td>
+      <td>129.884666</td>
+      <td>6.2</td>
+      <td>6.0</td>
+      <td>2.7</td>
+    </tr>
+    <tr>
+      <th>Rashford</th>
+      <td>Man Utd</td>
+      <td>Midfielder</td>
+      <td>14.736842</td>
+      <td>154.145136</td>
+      <td>9.5</td>
+      <td>7.0</td>
+      <td>4.7</td>
+    </tr>
+    <tr>
+      <th>Mount</th>
+      <td>Chelsea</td>
+      <td>Midfielder</td>
+      <td>16.714286</td>
+      <td>124.422730</td>
+      <td>7.0</td>
+      <td>8.0</td>
       <td>5.2</td>
     </tr>
     <tr>
@@ -117,110 +107,120 @@
       <td>Man City</td>
       <td>Midfielder</td>
       <td>11.478261</td>
-      <td>196.256008</td>
+      <td>195.351014</td>
       <td>11.5</td>
-      <td>10.0</td>
-      <td>2.7</td>
-    </tr>
-    <tr>
-      <th>Mount</th>
-      <td>Chelsea</td>
-      <td>Midfielder</td>
-      <td>16.285714</td>
-      <td>121.047810</td>
-      <td>7.0</td>
-      <td>11.0</td>
-      <td>5.6</td>
-    </tr>
-    <tr>
-      <th>Neto</th>
-      <td>Wolves</td>
-      <td>Midfielder</td>
-      <td>20.350877</td>
-      <td>107.615287</td>
-      <td>5.7</td>
-      <td>12.0</td>
-      <td>3.4</td>
-    </tr>
-    <tr>
-      <th>Neves</th>
-      <td>Wolves</td>
-      <td>Midfielder</td>
-      <td>17.450980</td>
-      <td>87.214584</td>
-      <td>5.1</td>
-      <td>13.0</td>
-      <td>6.2</td>
+      <td>9.0</td>
+      <td>1.9</td>
     </tr>
     <tr>
       <th>Soucek</th>
       <td>West Ham</td>
       <td>Midfielder</td>
-      <td>21.698113</td>
-      <td>104.941843</td>
+      <td>22.075472</td>
+      <td>108.587217</td>
       <td>5.3</td>
-      <td>14.0</td>
+      <td>10.0</td>
       <td>2.2</td>
+    </tr>
+    <tr>
+      <th>Neto</th>
+      <td>Wolves</td>
+      <td>Midfielder</td>
+      <td>20.701754</td>
+      <td>110.315036</td>
+      <td>5.7</td>
+      <td>11.0</td>
+      <td>2.6</td>
+    </tr>
+    <tr>
+      <th>De Bruyne</th>
+      <td>Man City</td>
+      <td>Midfielder</td>
+      <td>10.504202</td>
+      <td>154.603934</td>
+      <td>11.9</td>
+      <td>12.0</td>
+      <td>4.3</td>
+    </tr>
+    <tr>
+      <th>Tielemans</th>
+      <td>Leicester</td>
+      <td>Midfielder</td>
+      <td>17.076923</td>
+      <td>119.568818</td>
+      <td>6.5</td>
+      <td>13.0</td>
+      <td>3.4</td>
+    </tr>
+    <tr>
+      <th>Barnes</th>
+      <td>Leicester</td>
+      <td>Midfielder</td>
+      <td>18.529412</td>
+      <td>111.766366</td>
+      <td>6.8</td>
+      <td>14.0</td>
+      <td>2.8</td>
     </tr>
     <tr>
       <th>Aubameyang</th>
       <td>Arsenal</td>
       <td>Midfielder</td>
       <td>9.122807</td>
-      <td>121.319964</td>
+      <td>126.362545</td>
       <td>11.4</td>
       <td>15.0</td>
-      <td>7.8</td>
+      <td>6.2</td>
     </tr>
     <tr>
-      <th>Maddison</th>
-      <td>Leicester</td>
+      <th>Raphinha</th>
+      <td>Leeds</td>
       <td>Midfielder</td>
-      <td>16.527778</td>
-      <td>121.124784</td>
-      <td>7.2</td>
+      <td>17.678571</td>
+      <td>97.593941</td>
+      <td>5.6</td>
       <td>16.0</td>
-      <td>3.4</td>
+      <td>4.0</td>
     </tr>
     <tr>
-      <th>Tielemans</th>
-      <td>Leicester</td>
+      <th>Neves</th>
+      <td>Wolves</td>
       <td>Midfielder</td>
-      <td>16.875000</td>
-      <td>113.691006</td>
-      <td>6.4</td>
+      <td>17.647059</td>
+      <td>91.868250</td>
+      <td>5.1</td>
       <td>17.0</td>
-      <td>3.2</td>
+      <td>3.8</td>
+    </tr>
+    <tr>
+      <th>Jorginho</th>
+      <td>Chelsea</td>
+      <td>Midfielder</td>
+      <td>19.361702</td>
+      <td>86.554549</td>
+      <td>4.7</td>
+      <td>18.0</td>
+      <td>3.3</td>
     </tr>
     <tr>
       <th>Foden</th>
       <td>Man City</td>
       <td>Midfielder</td>
       <td>17.540984</td>
-      <td>105.182589</td>
+      <td>101.956521</td>
       <td>6.1</td>
-      <td>18.0</td>
-      <td>3.4</td>
-    </tr>
-    <tr>
-      <th>Raphinha</th>
-      <td>Leeds</td>
-      <td>Midfielder</td>
-      <td>17.454545</td>
-      <td>94.491186</td>
-      <td>5.5</td>
       <td>19.0</td>
-      <td>4.2</td>
+      <td>3.0</td>
     </tr>
     <tr>
-      <th>Grealish</th>
-      <td>Aston Villa</td>
+      <th>Maddison</th>
+      <td>Leicester</td>
       <td>Midfielder</td>
-      <td>17.200000</td>
-      <td>131.634628</td>
-      <td>7.5</td>
+      <td>16.760563</td>
+      <td>122.466020</td>
+      <td>7.1</td>
       <td>20.0</td>
-      <td>0.4</td>
+      <td>1.8</td>
     </tr>
   </tbody>
 </table>
