--- a/templates/forwards.html
+++ b/templates/forwards.html
@@ -26,9 +26,9 @@
       <th>Kane</th>
       <td>Spurs</td>
       <td>Forward</td>
-      <td>16.106195</td>
-      <td>194.699295</td>
-      <td>11.3</td>
+      <td>16.140351</td>
+      <td>195.977997</td>
+      <td>11.4</td>
       <td>1.0</td>
       <td>6.2</td>
     </tr>
@@ -36,191 +36,191 @@
       <th>Bamford</th>
       <td>Leeds</td>
       <td>Forward</td>
-      <td>21.176471</td>
-      <td>136.997887</td>
-      <td>6.8</td>
+      <td>21.641791</td>
+      <td>127.748086</td>
+      <td>6.7</td>
       <td>2.0</td>
-      <td>2.8</td>
+      <td>2.5</td>
     </tr>
     <tr>
       <th>Vardy</th>
       <td>Leicester</td>
       <td>Forward</td>
-      <td>13.137255</td>
-      <td>180.287763</td>
+      <td>14.411765</td>
+      <td>149.801540</td>
       <td>10.2</td>
       <td>3.0</td>
-      <td>3.4</td>
+      <td>4.8</td>
     </tr>
     <tr>
       <th>Calvert-Lewin</th>
       <td>Everton</td>
       <td>Forward</td>
-      <td>16.883117</td>
-      <td>134.155875</td>
+      <td>17.662338</td>
+      <td>133.711923</td>
       <td>7.7</td>
       <td>4.0</td>
-      <td>1.7</td>
+      <td>2.3</td>
     </tr>
     <tr>
       <th>Watkins</th>
       <td>Aston Villa</td>
       <td>Forward</td>
-      <td>17.121212</td>
-      <td>116.282661</td>
+      <td>17.878788</td>
+      <td>117.408434</td>
       <td>6.6</td>
       <td>5.0</td>
-      <td>2.6</td>
-    </tr>
-    <tr>
-      <th>Richarlison</th>
-      <td>Everton</td>
-      <td>Forward</td>
-      <td>11.500000</td>
-      <td>95.967345</td>
-      <td>8.0</td>
-      <td>6.0</td>
-      <td>5.7</td>
+      <td>3.2</td>
     </tr>
     <tr>
       <th>Adams</th>
       <td>Southampton</td>
       <td>Forward</td>
-      <td>17.241379</td>
-      <td>76.595123</td>
+      <td>18.620690</td>
+      <td>75.608485</td>
       <td>5.8</td>
-      <td>7.0</td>
-      <td>3.0</td>
+      <td>6.0</td>
+      <td>4.2</td>
     </tr>
     <tr>
-      <th>Firmino</th>
-      <td>Liverpool</td>
+      <th>Richarlison</th>
+      <td>Everton</td>
       <td>Forward</td>
-      <td>11.086957</td>
-      <td>124.997876</td>
-      <td>9.2</td>
+      <td>11.750000</td>
+      <td>104.862268</td>
       <td>8.0</td>
-      <td>2.8</td>
+      <td>7.0</td>
+      <td>5.1</td>
     </tr>
     <tr>
       <th>Wilson</th>
       <td>Newcastle</td>
       <td>Forward</td>
       <td>17.846154</td>
-      <td>111.520001</td>
+      <td>112.897366</td>
       <td>6.5</td>
-      <td>9.0</td>
+      <td>8.0</td>
       <td>0.0</td>
+    </tr>
+    <tr>
+      <th>Lacazette</th>
+      <td>Arsenal</td>
+      <td>Forward</td>
+      <td>12.098765</td>
+      <td>99.952761</td>
+      <td>8.1</td>
+      <td>9.0</td>
+      <td>3.6</td>
+    </tr>
+    <tr>
+      <th>Firmino</th>
+      <td>Liverpool</td>
+      <td>Forward</td>
+      <td>11.208791</td>
+      <td>123.083995</td>
+      <td>9.1</td>
+      <td>10.0</td>
+      <td>1.8</td>
+    </tr>
+    <tr>
+      <th>Maupay</th>
+      <td>Brighton</td>
+      <td>Forward</td>
+      <td>14.590164</td>
+      <td>82.194507</td>
+      <td>6.1</td>
+      <td>11.0</td>
+      <td>2.8</td>
+    </tr>
+    <tr>
+      <th>Jesus</th>
+      <td>Man City</td>
+      <td>Forward</td>
+      <td>9.673913</td>
+      <td>100.329716</td>
+      <td>9.2</td>
+      <td>12.0</td>
+      <td>4.1</td>
+    </tr>
+    <tr>
+      <th>Wood</th>
+      <td>Burnley</td>
+      <td>Forward</td>
+      <td>13.387097</td>
+      <td>82.353304</td>
+      <td>6.2</td>
+      <td>13.0</td>
+      <td>3.3</td>
+    </tr>
+    <tr>
+      <th>Werner</th>
+      <td>Chelsea</td>
+      <td>Forward</td>
+      <td>10.978261</td>
+      <td>109.406351</td>
+      <td>9.2</td>
+      <td>14.0</td>
+      <td>2.3</td>
+    </tr>
+    <tr>
+      <th>Antonio</th>
+      <td>West Ham</td>
+      <td>Forward</td>
+      <td>12.424242</td>
+      <td>80.310370</td>
+      <td>6.6</td>
+      <td>15.0</td>
+      <td>3.4</td>
+    </tr>
+    <tr>
+      <th>Iheanacho</th>
+      <td>Leicester</td>
+      <td>Forward</td>
+      <td>9.821429</td>
+      <td>45.372088</td>
+      <td>5.6</td>
+      <td>16.0</td>
+      <td>7.4</td>
+    </tr>
+    <tr>
+      <th>Benteke</th>
+      <td>Crystal Palace</td>
+      <td>Forward</td>
+      <td>11.636364</td>
+      <td>62.407042</td>
+      <td>5.5</td>
+      <td>17.0</td>
+      <td>4.2</td>
     </tr>
     <tr>
       <th>Ings</th>
       <td>Southampton</td>
       <td>Forward</td>
       <td>11.309524</td>
-      <td>118.279133</td>
+      <td>102.827256</td>
       <td>8.4</td>
-      <td>10.0</td>
-      <td>2.3</td>
-    </tr>
-    <tr>
-      <th>Maupay</th>
-      <td>Brighton</td>
-      <td>Forward</td>
-      <td>14.262295</td>
-      <td>81.848050</td>
-      <td>6.1</td>
-      <td>11.0</td>
-      <td>2.8</td>
-    </tr>
-    <tr>
-      <th>Werner</th>
-      <td>Chelsea</td>
-      <td>Forward</td>
-      <td>10.869565</td>
-      <td>104.701917</td>
-      <td>9.2</td>
-      <td>12.0</td>
-      <td>2.6</td>
-    </tr>
-    <tr>
-      <th>Antonio</th>
-      <td>West Ham</td>
-      <td>Forward</td>
-      <td>12.121212</td>
-      <td>70.190451</td>
-      <td>6.6</td>
-      <td>13.0</td>
-      <td>3.8</td>
-    </tr>
-    <tr>
-      <th>Lacazette</th>
-      <td>Arsenal</td>
-      <td>Forward</td>
-      <td>11.111111</td>
-      <td>91.823818</td>
-      <td>8.1</td>
-      <td>14.0</td>
-      <td>2.5</td>
-    </tr>
-    <tr>
-      <th>Jesus</th>
-      <td>Man City</td>
-      <td>Forward</td>
-      <td>8.913043</td>
-      <td>93.890200</td>
-      <td>9.2</td>
-      <td>15.0</td>
-      <td>3.4</td>
-    </tr>
-    <tr>
-      <th>Benteke</th>
-      <td>Crystal Palace</td>
-      <td>Forward</td>
-      <td>11.272727</td>
-      <td>59.831986</td>
-      <td>5.5</td>
-      <td>16.0</td>
-      <td>4.2</td>
+      <td>18.0</td>
+      <td>1.0</td>
     </tr>
     <tr>
       <th>McGoldrick</th>
       <td>Sheffield Utd</td>
       <td>Forward</td>
       <td>13.461538</td>
-      <td>68.296214</td>
+      <td>68.679076</td>
       <td>5.2</td>
-      <td>17.0</td>
-      <td>1.8</td>
-    </tr>
-    <tr>
-      <th>Wood</th>
-      <td>Burnley</td>
-      <td>Forward</td>
-      <td>12.096774</td>
-      <td>76.153043</td>
-      <td>6.2</td>
-      <td>18.0</td>
-      <td>2.0</td>
+      <td>19.0</td>
+      <td>1.5</td>
     </tr>
     <tr>
       <th>Decordova-Reid</th>
       <td>Fulham</td>
       <td>Forward</td>
       <td>12.830189</td>
-      <td>68.139496</td>
+      <td>67.446876</td>
       <td>5.3</td>
-      <td>19.0</td>
-      <td>1.5</td>
-    </tr>
-    <tr>
-      <th>Martial</th>
-      <td>Man Utd</td>
-      <td>Forward</td>
-      <td>8.720930</td>
-      <td>84.506282</td>
-      <td>8.6</td>
       <td>20.0</td>
-      <td>2.0</td>
+      <td>1.3</td>
     </tr>
   </tbody>
 </table>
