Updated with GW29 data. Still not running the script with the button push. Will look into

--- a/templates/midfielders.html
+++ b/templates/midfielders.html
@@ -27,159 +27,179 @@
       <td>Man Utd</td>
       <td>Midfielder</td>
       <td>18.173913</td>
-      <td>211.697519</td>
+      <td>213.474192</td>
       <td>11.5</td>
       <td>1.0</td>
-      <td>6.7</td>
+      <td>6.2</td>
     </tr>
     <tr>
       <th>Son</th>
       <td>Spurs</td>
       <td>Midfielder</td>
-      <td>18.645833</td>
-      <td>177.369475</td>
-      <td>9.6</td>
+      <td>19.042553</td>
+      <td>179.198157</td>
+      <td>9.4</td>
       <td>2.0</td>
-      <td>4.4</td>
+      <td>3.7</td>
     </tr>
     <tr>
       <th>Mahrez</th>
       <td>Man City</td>
       <td>Midfielder</td>
       <td>15.925926</td>
-      <td>135.133192</td>
+      <td>133.142519</td>
       <td>8.1</td>
       <td>3.0</td>
-      <td>7.6</td>
-    </tr>
-    <tr>
-      <th>Salah</th>
-      <td>Liverpool</td>
-      <td>Midfielder</td>
-      <td>14.032258</td>
-      <td>200.090247</td>
-      <td>12.4</td>
-      <td>4.0</td>
-      <td>2.4</td>
+      <td>7.3</td>
     </tr>
     <tr>
       <th>Ward-Prowse</th>
       <td>Southampton</td>
       <td>Midfielder</td>
       <td>21.355932</td>
-      <td>120.676934</td>
+      <td>122.733718</td>
       <td>5.9</td>
+      <td>4.0</td>
+      <td>4.8</td>
+    </tr>
+    <tr>
+      <th>Salah</th>
+      <td>Liverpool</td>
+      <td>Midfielder</td>
+      <td>14.032258</td>
+      <td>205.150410</td>
+      <td>12.4</td>
       <td>5.0</td>
-      <td>4.3</td>
+      <td>2.5</td>
     </tr>
     <tr>
       <th>Gündogan</th>
       <td>Man City</td>
       <td>Midfielder</td>
-      <td>22.903226</td>
-      <td>129.884666</td>
-      <td>6.2</td>
+      <td>23.278689</td>
+      <td>131.403192</td>
+      <td>6.1</td>
       <td>6.0</td>
-      <td>2.7</td>
+      <td>3.2</td>
     </tr>
     <tr>
       <th>Rashford</th>
       <td>Man Utd</td>
       <td>Midfielder</td>
       <td>14.736842</td>
-      <td>154.145136</td>
+      <td>148.615420</td>
       <td>9.5</td>
       <td>7.0</td>
-      <td>4.7</td>
+      <td>5.2</td>
+    </tr>
+    <tr>
+      <th>Trossard</th>
+      <td>Brighton</td>
+      <td>Midfielder</td>
+      <td>18.448276</td>
+      <td>98.140129</td>
+      <td>5.8</td>
+      <td>8.0</td>
+      <td>6.0</td>
+    </tr>
+    <tr>
+      <th>Soucek</th>
+      <td>West Ham</td>
+      <td>Midfielder</td>
+      <td>23.018868</td>
+      <td>110.068667</td>
+      <td>5.3</td>
+      <td>9.0</td>
+      <td>2.6</td>
     </tr>
     <tr>
       <th>Mount</th>
       <td>Chelsea</td>
       <td>Midfielder</td>
       <td>16.714286</td>
-      <td>124.422730</td>
+      <td>123.541733</td>
       <td>7.0</td>
-      <td>8.0</td>
-      <td>5.2</td>
-    </tr>
-    <tr>
-      <th>Sterling</th>
-      <td>Man City</td>
-      <td>Midfielder</td>
-      <td>11.478261</td>
-      <td>195.351014</td>
-      <td>11.5</td>
-      <td>9.0</td>
-      <td>1.9</td>
-    </tr>
-    <tr>
-      <th>Soucek</th>
-      <td>West Ham</td>
-      <td>Midfielder</td>
-      <td>22.075472</td>
-      <td>108.587217</td>
-      <td>5.3</td>
       <td>10.0</td>
-      <td>2.2</td>
-    </tr>
-    <tr>
-      <th>Neto</th>
-      <td>Wolves</td>
-      <td>Midfielder</td>
-      <td>20.701754</td>
-      <td>110.315036</td>
-      <td>5.7</td>
-      <td>11.0</td>
-      <td>2.6</td>
+      <td>4.5</td>
     </tr>
     <tr>
       <th>De Bruyne</th>
       <td>Man City</td>
       <td>Midfielder</td>
       <td>10.504202</td>
-      <td>154.603934</td>
+      <td>159.275782</td>
       <td>11.9</td>
+      <td>11.0</td>
+      <td>4.8</td>
+    </tr>
+    <tr>
+      <th>Sterling</th>
+      <td>Man City</td>
+      <td>Midfielder</td>
+      <td>11.578947</td>
+      <td>191.241244</td>
+      <td>11.4</td>
       <td>12.0</td>
-      <td>4.3</td>
+      <td>2.0</td>
+    </tr>
+    <tr>
+      <th>Raphinha</th>
+      <td>Leeds</td>
+      <td>Midfielder</td>
+      <td>18.771930</td>
+      <td>103.228490</td>
+      <td>5.7</td>
+      <td>13.0</td>
+      <td>4.6</td>
+    </tr>
+    <tr>
+      <th>Neto</th>
+      <td>Wolves</td>
+      <td>Midfielder</td>
+      <td>20.701754</td>
+      <td>112.949501</td>
+      <td>5.7</td>
+      <td>14.0</td>
+      <td>2.8</td>
+    </tr>
+    <tr>
+      <th>Barnes</th>
+      <td>Leicester</td>
+      <td>Midfielder</td>
+      <td>18.805970</td>
+      <td>118.992232</td>
+      <td>6.7</td>
+      <td>15.0</td>
+      <td>2.8</td>
     </tr>
     <tr>
       <th>Tielemans</th>
       <td>Leicester</td>
       <td>Midfielder</td>
       <td>17.076923</td>
-      <td>119.568818</td>
+      <td>119.840709</td>
       <td>6.5</td>
-      <td>13.0</td>
+      <td>16.0</td>
       <td>3.4</td>
     </tr>
     <tr>
-      <th>Barnes</th>
-      <td>Leicester</td>
-      <td>Midfielder</td>
-      <td>18.529412</td>
-      <td>111.766366</td>
-      <td>6.8</td>
-      <td>14.0</td>
-      <td>2.8</td>
-    </tr>
-    <tr>
-      <th>Aubameyang</th>
-      <td>Arsenal</td>
-      <td>Midfielder</td>
-      <td>9.122807</td>
-      <td>126.362545</td>
-      <td>11.4</td>
-      <td>15.0</td>
-      <td>6.2</td>
-    </tr>
-    <tr>
-      <th>Raphinha</th>
+      <th>Harrison</th>
       <td>Leeds</td>
       <td>Midfielder</td>
-      <td>17.678571</td>
-      <td>97.593941</td>
-      <td>5.6</td>
-      <td>16.0</td>
+      <td>20.555556</td>
+      <td>98.958192</td>
+      <td>5.4</td>
+      <td>17.0</td>
+      <td>2.6</td>
+    </tr>
+    <tr>
+      <th>Jorginho</th>
+      <td>Chelsea</td>
+      <td>Midfielder</td>
+      <td>19.361702</td>
+      <td>84.626743</td>
+      <td>4.7</td>
+      <td>18.0</td>
       <td>4.0</td>
     </tr>
     <tr>
@@ -187,40 +207,20 @@
       <td>Wolves</td>
       <td>Midfielder</td>
       <td>17.647059</td>
-      <td>91.868250</td>
+      <td>88.984043</td>
       <td>5.1</td>
-      <td>17.0</td>
-      <td>3.8</td>
-    </tr>
-    <tr>
-      <th>Jorginho</th>
-      <td>Chelsea</td>
-      <td>Midfielder</td>
-      <td>19.361702</td>
-      <td>86.554549</td>
-      <td>4.7</td>
-      <td>18.0</td>
-      <td>3.3</td>
-    </tr>
-    <tr>
-      <th>Foden</th>
-      <td>Man City</td>
-      <td>Midfielder</td>
-      <td>17.540984</td>
-      <td>101.956521</td>
-      <td>6.1</td>
       <td>19.0</td>
-      <td>3.0</td>
+      <td>4.0</td>
     </tr>
     <tr>
-      <th>Maddison</th>
-      <td>Leicester</td>
+      <th>Mané</th>
+      <td>Liverpool</td>
       <td>Midfielder</td>
-      <td>16.760563</td>
-      <td>122.466020</td>
-      <td>7.1</td>
+      <td>10.169492</td>
+      <td>152.868631</td>
+      <td>11.8</td>
       <td>20.0</td>
-      <td>1.8</td>
+      <td>3.0</td>
     </tr>
   </tbody>
 </table>
