--- a/templates/defenders.html
+++ b/templates/defenders.html
@@ -23,204 +23,204 @@
   </thead>
   <tbody>
     <tr>
-      <th>Cresswell</th>
-      <td>West Ham</td>
-      <td>Defender</td>
-      <td>22.881356</td>
-      <td>111.393523</td>
-      <td>5.9</td>
-      <td>1.0</td>
-      <td>5.8</td>
-    </tr>
-    <tr>
       <th>Shaw</th>
       <td>Man Utd</td>
       <td>Defender</td>
       <td>20.769231</td>
-      <td>103.551548</td>
+      <td>105.166976</td>
       <td>5.2</td>
-      <td>2.0</td>
-      <td>7.5</td>
+      <td>1.0</td>
+      <td>7.4</td>
     </tr>
     <tr>
-      <th>Dias</th>
-      <td>Man City</td>
+      <th>Dallas</th>
+      <td>Leeds</td>
       <td>Defender</td>
-      <td>20.819672</td>
-      <td>128.191447</td>
-      <td>6.1</td>
-      <td>3.0</td>
-      <td>4.1</td>
+      <td>23.921569</td>
+      <td>107.807608</td>
+      <td>5.1</td>
+      <td>2.0</td>
+      <td>5.2</td>
     </tr>
     <tr>
       <th>Stones</th>
       <td>Man City</td>
       <td>Defender</td>
       <td>23.018868</td>
-      <td>113.313110</td>
+      <td>112.184484</td>
       <td>5.3</td>
-      <td>4.0</td>
-      <td>4.4</td>
+      <td>3.0</td>
+      <td>5.2</td>
     </tr>
     <tr>
       <th>Maguire</th>
       <td>Man Utd</td>
       <td>Defender</td>
       <td>20.545455</td>
-      <td>113.839266</td>
+      <td>114.197662</td>
       <td>5.5</td>
+      <td>4.0</td>
+      <td>6.2</td>
+    </tr>
+    <tr>
+      <th>Dias</th>
+      <td>Man City</td>
+      <td>Defender</td>
+      <td>20.819672</td>
+      <td>128.708045</td>
+      <td>6.1</td>
       <td>5.0</td>
-      <td>5.5</td>
+      <td>4.5</td>
     </tr>
     <tr>
       <th>Wan-Bissaka</th>
       <td>Man Utd</td>
       <td>Defender</td>
       <td>21.052632</td>
-      <td>119.709913</td>
+      <td>119.371275</td>
       <td>5.7</td>
       <td>6.0</td>
-      <td>4.5</td>
-    </tr>
-    <tr>
-      <th>Dallas</th>
-      <td>Leeds</td>
-      <td>Defender</td>
-      <td>23.529412</td>
-      <td>108.032308</td>
-      <td>5.1</td>
-      <td>7.0</td>
-      <td>4.2</td>
-    </tr>
-    <tr>
-      <th>Targett</th>
-      <td>Aston Villa</td>
-      <td>Defender</td>
-      <td>23.200000</td>
-      <td>110.281016</td>
       <td>5.0</td>
-      <td>8.0</td>
-      <td>3.6</td>
+    </tr>
+    <tr>
+      <th>Cresswell</th>
+      <td>West Ham</td>
+      <td>Defender</td>
+      <td>22.881356</td>
+      <td>121.165873</td>
+      <td>5.9</td>
+      <td>7.0</td>
+      <td>3.4</td>
     </tr>
     <tr>
       <th>Cancelo</th>
       <td>Man City</td>
       <td>Defender</td>
-      <td>19.677419</td>
-      <td>122.096299</td>
-      <td>6.2</td>
+      <td>20.000000</td>
+      <td>124.260359</td>
+      <td>6.1</td>
+      <td>8.0</td>
+      <td>3.3</td>
+    </tr>
+    <tr>
+      <th>Targett</th>
+      <td>Aston Villa</td>
+      <td>Defender</td>
+      <td>22.745098</td>
+      <td>112.330114</td>
+      <td>5.1</td>
       <td>9.0</td>
-      <td>3.1</td>
+      <td>3.0</td>
     </tr>
     <tr>
       <th>Azpilicueta</th>
       <td>Chelsea</td>
       <td>Defender</td>
       <td>16.724138</td>
-      <td>102.579024</td>
+      <td>98.476457</td>
       <td>5.8</td>
       <td>10.0</td>
-      <td>6.2</td>
-    </tr>
-    <tr>
-      <th>Mings</th>
-      <td>Aston Villa</td>
-      <td>Defender</td>
-      <td>20.000000</td>
-      <td>109.258320</td>
-      <td>5.4</td>
-      <td>11.0</td>
-      <td>3.6</td>
-    </tr>
-    <tr>
-      <th>Aina</th>
-      <td>Fulham</td>
-      <td>Defender</td>
-      <td>20.222222</td>
-      <td>87.384945</td>
-      <td>4.5</td>
-      <td>12.0</td>
-      <td>5.4</td>
-    </tr>
-    <tr>
-      <th>Alexander-Arnold</th>
-      <td>Liverpool</td>
-      <td>Defender</td>
-      <td>12.876712</td>
-      <td>135.037385</td>
-      <td>7.3</td>
-      <td>13.0</td>
-      <td>4.4</td>
-    </tr>
-    <tr>
-      <th>Konsa</th>
-      <td>Aston Villa</td>
-      <td>Defender</td>
-      <td>21.521739</td>
-      <td>94.720542</td>
-      <td>4.6</td>
-      <td>14.0</td>
-      <td>3.6</td>
+      <td>7.0</td>
     </tr>
     <tr>
       <th>Robertson</th>
       <td>Liverpool</td>
       <td>Defender</td>
       <td>15.915493</td>
-      <td>123.110298</td>
+      <td>126.802799</td>
       <td>7.1</td>
-      <td>15.0</td>
-      <td>3.6</td>
+      <td>11.0</td>
+      <td>4.2</td>
     </tr>
     <tr>
-      <th>Adarabioyo</th>
-      <td>Fulham</td>
+      <th>Alexander-Arnold</th>
+      <td>Liverpool</td>
       <td>Defender</td>
-      <td>20.000000</td>
-      <td>86.327863</td>
-      <td>4.5</td>
-      <td>16.0</td>
-      <td>4.7</td>
+      <td>12.876712</td>
+      <td>130.247259</td>
+      <td>7.3</td>
+      <td>12.0</td>
+      <td>5.2</td>
+    </tr>
+    <tr>
+      <th>Mings</th>
+      <td>Aston Villa</td>
+      <td>Defender</td>
+      <td>20.185185</td>
+      <td>109.709418</td>
+      <td>5.4</td>
+      <td>13.0</td>
+      <td>3.2</td>
     </tr>
     <tr>
       <th>Keane</th>
       <td>Everton</td>
       <td>Defender</td>
       <td>19.215686</td>
-      <td>98.111094</td>
+      <td>97.953469</td>
       <td>5.1</td>
-      <td>17.0</td>
-      <td>3.9</td>
+      <td>14.0</td>
+      <td>4.8</td>
     </tr>
     <tr>
       <th>Dunk</th>
       <td>Brighton</td>
       <td>Defender</td>
-      <td>19.000000</td>
-      <td>95.446653</td>
+      <td>20.200000</td>
+      <td>99.612187</td>
       <td>5.0</td>
+      <td>15.0</td>
+      <td>4.0</td>
+    </tr>
+    <tr>
+      <th>Konsa</th>
+      <td>Aston Villa</td>
+      <td>Defender</td>
+      <td>21.276596</td>
+      <td>95.624381</td>
+      <td>4.7</td>
+      <td>16.0</td>
+      <td>3.2</td>
+    </tr>
+    <tr>
+      <th>Chilwell</th>
+      <td>Chelsea</td>
+      <td>Defender</td>
+      <td>17.931034</td>
+      <td>102.088098</td>
+      <td>5.8</td>
+      <td>17.0</td>
+      <td>4.2</td>
+    </tr>
+    <tr>
+      <th>Adarabioyo</th>
+      <td>Fulham</td>
+      <td>Defender</td>
+      <td>20.222222</td>
+      <td>88.741477</td>
+      <td>4.5</td>
       <td>18.0</td>
-      <td>3.5</td>
+      <td>3.8</td>
+    </tr>
+    <tr>
+      <th>Andersen</th>
+      <td>Fulham</td>
+      <td>Defender</td>
+      <td>19.333333</td>
+      <td>84.054488</td>
+      <td>4.5</td>
+      <td>19.0</td>
+      <td>4.6</td>
     </tr>
     <tr>
       <th>Coady</th>
       <td>Wolves</td>
       <td>Defender</td>
       <td>17.708333</td>
-      <td>82.884059</td>
+      <td>83.702714</td>
       <td>4.8</td>
-      <td>19.0</td>
-      <td>5.2</td>
-    </tr>
-    <tr>
-      <th>Coufal</th>
-      <td>West Ham</td>
-      <td>Defender</td>
-      <td>19.782609</td>
-      <td>87.695188</td>
-      <td>4.6</td>
       <td>20.0</td>
-      <td>3.4</td>
+      <td>5.0</td>
     </tr>
   </tbody>
 </table>
